added foundation on frontend

--- a/package.json
+++ b/package.json
@@ -6,55 +6,51 @@
   "author": "Adarsh",
   "license": "UNLICENSED",
   "private": true,
-  "scripts": {
+"scripts": {
     "dev:server": "tsx watch server/app.ts",
-    "dev:electron": "electron .",
-    "dev": "concurrently \"npm run dev:server\" \"wait-on http://localhost:3001/api/health && npm run dev:electron\"",
-    "build:server": "tsc -p tsconfig.server.json",
-    "build:renderer": "vite build",
-    "build:electron": "tsc -p tsconfig.electron.json",
-    "build": "npm run build:server && npm run build:renderer && npm run build:electron",
-    "package:win": "npm run build && electron-builder --win",
-    "package:mac": "npm run build && electron-builder --mac",
-    "migrate:latest": "tsx node_modules/.bin/knex migrate:latest --knexfile server/database/knexfile.ts",
-    "migrate:rollback": "tsx node_modules/.bin/knex migrate:rollback --knexfile server/database/knexfile.ts",
-    "migrate:make": "tsx node_modules/.bin/knex migrate:make --knexfile server/database/knexfile.ts",
-    "seed:run": "tsx node_modules/.bin/knex seed:run --knexfile server/database/knexfile.ts"
-  },
+    "dev:vite": "vite --config vite.config.ts",
+    "dev:electron": "wait-on http://localhost:5173 && NODE_ENV=development electron --require tsx electron/main.ts",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:vite\" \"npm run dev:electron\""
+},
   "dependencies": {
-    "fastify": "^5.2.1",
     "@fastify/cors": "^11.0.0",
     "@fastify/helmet": "^13.0.0",
     "@fastify/sensible": "^6.0.0",
+    "axios": "^1.13.5",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
-    "zod": "^3.24.2",
-    "uuid": "^11.1.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dayjs": "^1.11.13",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "dotenv": "^16.4.7"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.12.0",
+    "@types/pg": "^8.11.11",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.24",
+    "concurrently": "^9.1.2",
     "electron": "^34.1.1",
     "electron-builder": "^25.1.8",
-    "typescript": "^5.7.3",
-    "tsx": "^4.19.2",
-    "vite": "^6.1.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@types/node": "^22.12.0",
-    "@types/pg": "^8.11.11",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/uuid": "^10.0.0",
-    "concurrently": "^9.1.2",
+    "tailwindcss": "^3.4.19",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
     "wait-on": "^8.0.2"
   },
   "build": {
